# elboni_controller-480x480-4-

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
main/bus/: elboni_can.c  elboni_can.h  elboni_iic.c  elboni_iic.h  elboni_rs485.c  elboni_rs485.h
main/gui/: lv_example_clockScreen.c  lv_example_image.h  lv_example_pub.h  lv_example_set.c  lv_example_show_settng.c  lv_example_top_menu.c  lv_schedule_basic.c  readme.txt  ui_boot_animate.c  ui_sr.c
main/gui/assert/: Philips_logo.c
main/middleware/: elboni_can.c  elboni_can.h  elboni_rs485.c  elboni_rtc.c  elboni_rtc.h  elboni_sd.c  elboni_sd.h  settings.c  settings.h
main/modules/: PCF85063A.c  PCF85063A.h  elboni_nvram.c  elboni_spiffs.c  elboni_system_setting.c  elboni_system_setting.h  esp_bluetooth.c  gt911.c  lvgl_port.c  lvgl_port.h  modules.h  st7701.c  wifi.c
main/port/: CMakeLists.txt  elboni_can.c  elboni_can.h  elboni_rs485.c  elboni_rs485.h
main/protocol/: app_sntp.c  app_weather.c  readme.txt
